<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DropBox Client</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dropbox_paper">Paper</string>
    <string name="file_requests">File requests</string>
    <string name="upgrade_account">Upgrade account</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="files">Files</string>
    <string name="photo">Photos</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="email_txt_v">Email</string>
    <string name="email">username123@gmail.com</string>
    <string name="memory_usage_txt_v">Space used</string>
    <string name="memory_usage">0.3% of 2.0 GB used</string>
    <string name="upgrade_for_more_space">Upgrade for more space</string>
    <string name="login">Log-In to your account</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="search_for_anything">Search for anything</string>
    <string name="your_files">Your Files</string>
    <string name="name">Name</string>
    <string name="scan">Scan</string>
    <string name="folder">Folder</string>
    <string name="filename1">Arisu Mlem</string>
    <string name="fileinfo1">40 KB, modified 2 days ago</string>
    <string name="filename2">When U Lose</string>
    <string name="fileinfo2">39 KB, modified 1 day ago</string>
    <string name="filename3">Jokes Not Fun</string>
    <string name="fileinfo3">15 KB, modified 18 hours ago</string>
    <string name="filename4">Need Link</string>
    <string name="fileinfo4">24 KB, modified 58 minutes ago</string>
    <string name="filename5">Truong Anh Ngoc</string>
    <string name="fileinfo5">27 KB, modified 1 week ago</string>
    <string name="filename6">Thanh Pahm</string>
    <string name="fileinfo6">61 KB, modified 2 months ago</string>
    <string name="fileimage">fileimage</string>
    <string name="view">View</string>

    <string name="notification">Notifications</string>
    <string name="avatar">avatar</string>
    <string name="details">Details</string>
    <string name="manage_devices_txt_v">Manage Devices</string>
    <string name="manage_devices">1 of 3</string>
    <string name="features">Features</string>
    <string name="camera_uploads">Camera Uploads</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="dropbox">Dropbox</string>
    <string name="invite">Invite friends to get free space</string>
    <string name="sign_out">Sign out of Dropbox</string>
    <string name="customize_home">Home Customization</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="starred">Starred</string>
    <string name="see_all">See all</string>
    <string name="home_starred_text">Anything you star shows up here for quick access.</string>
    <string name="viewed_links">Viewed links</string>
    <string name="home_viewed_links_text">Links you\'ve previously viewed show up here.</string>
    <string name="shared">Shared</string>
    <string name="home_shared_text">Your shared folders will show up here so they\'re easy to find.</string>
    <string name="offline">Offline</string>
    <string name="home_offline_text">Make your most important files available without internet.</string>
    <string name="show_me_how">Show me how</string>
    <string name="adjustment">Adjustment</string>
    <string name="selection">Selection</string>
    <string name="your_account">Your Account</string>
    <string name="check_box">Select items</string>
    <string name="most_popular">MOST POPULAR</string>
    <string name="plus">Plus</string>
    <string name="_2_000gb">2,000GB</string>
    <string name="plus_price">278.000 đ/month</string>
    <string name="plus_benefits">Sync across unlimited devices\nAuto-upload more photos with ease\nRevert any change within 30 days</string>
    <string name="professional">Professional</string>
    <string name="_3_000gb">3,000GB</string>
    <string name="professional_price">453.000 đ/month</string>
    <string name="trial_button">Try free for 30 days</string>

    <!--    settings fragment-->
    <string name="personal">Personal</string>
    <string name="dropbox_basic">Dropbox Basic</string>
    <string name="upgrade">Upgrade</string>
    <string name="off">Off</string>
    <string name="config_passcode">Config Passcode</string>
    <string name="connect_a_computer">Connect a computer</string>
    <string name="offline_files">Offline Files</string>
    <string name="offline_files_des">Currently using 0 bytes</string>
    <string name="use_data_for_offline_files">Use data for offline files</string>
    <string name="use_data_for_offline_files_des">Offline files will only download when you\'re connected to Wi-Fi</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_des">Follow system</string>
    <string name="dropbox_password">Dropbox Passwords</string>
    <string name="manage_notifications">Manage notifications</string>
    <string name="manage_default_apps">Manage Default App</string>
    <string name="sync_contacts">Sync contacts</string>
    <string name="sync_contacts_des">Then you can easily share with your contacts on Dropbox</string>
    <string name="invite_friends_to_get_free_space">Invite friends to get free space</string>
    <string name="get_early_releases">Get early releases</string>
    <string name="get_help">Get Help</string>
    <string name="send_feedback">Send feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="term_of_service">Term of service</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="open_source_third_party_software">Open source $ third party software</string>
    <string name="ccpa_preferences">CCPA preferences</string>
    <string name="app_version">App version</string>
    <string name="App_version_des">346.2.6</string>
    <string name="privacy">Privacy</string>
    <string name="hide_recent_items_on_home">Hide recent items on Home</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="sign_out_of_this_dropbox">Sign out of this Dropbox</string>

    <!--    upload settings-->
    <string name="upload">Upload\n</string>
    <string name="close">Close</string>
    <string name="find_your_upload_details_here">Find your upload details here</string>
    <string name="find_upload_des">You don\'t have any ongoing uploads.</string>
    <string name="upload_photos">Upload photos</string>
    <string name="upload_file">Upload file</string>
    <string name="keep_track_of_all_your_uploads">Keep track of all your uploads</string>
    <string name="keep_track_des">Now you can track the status of your uploaded photos and files</string>

    <string name="unread">Unread</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="last_week">Last Week</string>
    <string name="free_doc_scan">Secure? Organized? Easy? Try our free doc scanner today</string>
    <string name="start_scanning">Start scanning</string>
    <string name="this_month">This month</string>
    <string name="keep_your_data_safe">Turn on camera uploads to keep photos and videos backed up-automatically</string>
    <string name="keep_pics_safe">Keep pics safe</string>
    <string name="welcome_to_dropbox">Welcome to Dropbox! It\'s time to get started uploading and sharing</string>
    <string name="get_started">Get started</string>

<!--    login-->
    <string name="welcome_to_dropbox_2">Welcome to Dropbox</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">Or</string>
    <string name="continue_with_email">Continue with your Access Token</string>
    <string name="continue_email">Continue</string>
    <string name="having_trouble_signing_in">Having trouble signing in?</string>

    <!--    theme_switcher-->
    <string name="follow_system">Follow system</string>
    <string name="always_dark">Always dark</string>
    <string name="always_light">Always light</string>
    <string name="all">All</string>
    <string name="starred2">Star</string>
    <string name="photos">Photo</string>
    <string name="videos">Video</string>
    <string name="timeframe">Timeframe</string>
    <string name="days">Days</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="show">Show</string>
    <string name="zoom">Zoom</string>
    <string name="this_week">This Weak</string>
</resources>