<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <!-- User Avatar -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatarImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/img_1"
        android:contentDescription="@string/avatar"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"/>

    <!-- Username -->
    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/username"
        android:textSize="24sp"
        android:paddingTop="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="16sp"
        android:paddingTop="16dp"/>

    <!-- User Email -->
    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:paddingTop="10dp"/>

    <!-- Space Used -->
    <TextView
        android:id="@+id/spaceUsedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_usage"
        android:textSize="18sp"
        android:paddingTop="16dp"/>

    <TextView
        android:id="@+id/manageDevicesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_devices"
        android:textSize="18sp"
        android:paddingTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/features"
        android:textSize="16sp"
        android:paddingTop="30dp"/>

    <!-- Camera Uploads Switch -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/cameraUploadsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:switchPadding="10dp"
        android:text="@string/camera_uploads"
        android:textSize="18sp" />


    <!-- Offline Mode Switch -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/offlineModeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingTop="16dp"
        android:text="@string/offline_mode"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dropbox"
        android:textSize="16sp"
        android:paddingTop="30dp"/>

    <TextView
        android:id="@+id/friendsInviteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite"
        android:textSize="18sp"
        android:paddingTop="10dp"/>

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />
</LinearLayout>

