<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dropbox_paper"
            android:icon="@drawable/ic_dropbox_paper"
            android:title="@string/dropbox_paper" />
        <item
            android:id="@+id/nav_file_requests"
            android:icon="@drawable/ic_file_requests"
            android:title="@string/file_requests" />
        <item
            android:id="@+id/nav_upgrade_account"
            android:icon="@drawable/ic_upgrade_account"
            android:title="@string/upgrade_account" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

</menu>