<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="14dp"
    android:paddingEnd="14dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/zoom"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:layout_weight="2.5" />

        <ImageButton
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:paddingStart="50dp"
            android:src="@drawable/baseline_zoom_out_24" />

        <ImageButton
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:paddingStart="50dp"
            android:src="@drawable/baseline_zoom_in_24" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/show"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/all"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/starred2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        </LinearLayout>

        <LinearLayout
            android:layout_toEndOf="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/photos"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/videos"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>
    </RelativeLayout>

    <TextView

        android:id="@+id/timeframe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/timeframe"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal">


        <Button
            android:id="@+id/days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:text="@string/days"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <Button
            android:id="@+id/months"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:layout_toEndOf="@+id/days"
            android:text="@string/months"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <Button
            android:id="@+id/years"
            android:layout_toEndOf="@id/months"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:text="@string/years"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


    </RelativeLayout>
</LinearLayout>
