<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.UploadFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/find_your_upload_details_here"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/find_upload_des"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/layout_margin">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="0dp"
                android:text="@string/upload_photos"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                app:cornerRadius="0dp"
                android:text="@string/upload_file"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_image"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:src="@drawable/img_upload_light" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="@string/keep_track_of_all_your_uploads"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/keep_track_des"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>